Fri Jul  7 16:52:45 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/text-entry.c:
	  - Remove some old, commented-out code.

Fri Jul  7 16:25:02 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/irc-network-editor.c:
	* src/fe-gnome/irc-network-editor.h:
	* data/irc-network-editor.glade:
	  - Add a "key" column to the channel autojoin list in the network
	    configuration dialog. (#321981)

Fri Jul  7 12:58:21 MDT 2006  Christian Persch <chpe@gnome.org>

	* configure.ac:
	* Makefile.am:
	  - Eliminate unneeded AM_GLIB_DEFINE_LOCALEDIR. (#346936)

Fri Jul  7 12:22:06 MDT 2006  Christian Persch <chpe@gnome.org>

	* plugins/python/Makefile.am:
	* plugins/url_scraper/Makefile.am:
	* plugins/perl/Makefile.am:
	* plugins/tcl/Makefile.am:
	* plugins/notification/Makefile.am:
	* plugins/autoaway/Makefile.am:
	* plugins/net-monitor/Makefile.am:
	* plugins/notify-osd/Makefile.am:
	* plugins/sound-notification/Makefile.am:
	* plugins/dbus/Makefile.am:
	* src/common/Makefile.am:
	* src/fe-gnome/Makefile.am:
	* configure.ac:
	* Makefile.am:
	  - Some minor improvements to the buildsystem. (#346877)

Thu Jul  6 15:43:38 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	  - Close the tooltip in the conversation panel when changing
	    sessions. (#346704)

Thu Jul  6 15:09:59 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/common/xchat.c:
	  - Don't quit when closing the last server. (#327455)

Thu Jul  6 13:46:00 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/irc-network.c:
	  - WS & warnings cleanup.

Thu Jul  6 13:01:34 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	* src/fe-gnome/fe-gnome.c:
	  - Pop up the connect dialog on startup if there are no servers set
	    to auto-connect. (#345967)

Wed Jul  5 10:28:42 MDT 2006  Christian Persch <chpe@gnome.org>

	* src/fe-gnome/topic-label.c: